--- a/manager-account-web-a/src/main/java/cn/mldn/message/Messages.properties
+++ b/manager-account-web-a/src/main/java/cn/mldn/message/Messages.properties
@@ -9,8 +9,8 @@ emp.add.dept.mgr.failure=\u8be5\u90e8\u95e8\u5df2\u7ecf\u6709\u7ecf\u7406\u4e86\
 level.not.enough.failure=\u5bf9\u4e0d\u8d77\uff0c\u60a8\u6ca1\u6709\u64cd\u4f5c\u6743\u9650\uff01\uff01
 
 # ****** \u3010\u516c\u5171\u7684\u63d0\u793a\u4fe1\u606f\u5f00\u59cb\u3011\u5904\u7406CRUD\u7684\u57fa\u672c\u4fe1\u606f\u5185\u5bb9  ******
-vo.add.success={0}\u4fe1\u606f\u589e\u52a0\u6210\u529f\uff01
-vo.add.failure={0}\u4fe1\u606f\u589e\u52a0\u5931\u8d25\uff01
+emp.add.success={0}\u4fe1\u606f\u589e\u52a0\u6210\u529f\uff01
+emp.add.failure={0}\u4fe1\u606f\u589e\u52a0\u5931\u8d25\uff01
 vo.edit.success={0}\u4fe1\u606f\u7f16\u8f91\u6210\u529f\uff01
 vo.edit.failure={0}\u4fe1\u606f\u7f16\u8f91\u5931\u8d25\uff01
 vo.delete.success={0}\u4fe1\u606f\u5220\u9664\u6210\u529f\uff01
